--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,16 +1,42 @@
 .custom-header {
-	background-color: #12151c;
-	padding: 15px;
+	width: 100% !important;
+	background-color: rgb(21, 28, 53);
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+	padding: 20px;
 	.header-logo {
 		a {
 			display: flex;
-			color: white;
+			align-items: center;
 			.logo {
 				height: 40px;
-				margin-right: 10px;
+                margin-right: 10px;
+			}
+			p {
+				font-size: large;
+				color: white;
 			}
 		}
 	}
+}
+
+@media only screen and (max-width: 480px) {
+	.custom-header {
+		padding: 10px !important;
+		.header-logo {
+			a {
+				.logo {
+					height: 30px !important;
+				}
+				p {
+					font-size: medium;
+					color: white;
+				}
+			}
+		}
+	}
+}
+
+@media only screen and (max-device-width: 768px) {
 }
