--- a/src/styles/create.scss
+++ b/src/styles/create.scss
@@ -1,9 +1,19 @@
 .create-page {
-	padding: 10vh 30vh 0 30vh;
+	padding: 10vh 30vh;
 	.form {
 		margin-top: 20px;
 		background-color: white;
 	}
+	.thought-section {
+		display: flex;
+	}
+	.generate-btn {
+		width: 30%;
+		margin-top: 10px;
+	}
+    .input-group {
+        width: 50%;
+    }
 	.images-list {
 		margin: 20px 0;
 		display: flex;
@@ -23,10 +33,87 @@
 				place-items: center;
 			}
 		}
+
+		.image-actions {
+			width: 100%;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			.image-visibility-control {
+				.image-control {
+					width: 100%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+				}
+			}
+		}
 	}
-	// .btn-back-to-top{
-	//     position: absolute;
-	//     bottom: 0;
-	//     right: 0;
-	// }
+}
+
+@media only screen and (max-width: 1024px) {
+	.create-page {
+		padding: 5vh;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+}
+
+@media only screen and (max-width: 480px) {
+	.create-page {
+		padding: 2vh;
+		.heading {
+			font-size: large;
+		}
+		.description {
+			font-size: medium;
+		}
+		.input-group {
+			width: 100%;
+		}
+		.thought-section {
+			display: block;
+			.search-input {
+				margin-bottom: 10px;
+			}
+		}
+		.generate-btn {
+			width: 100%;
+		}
+		.surprise-btn {
+			width: 100% !important;
+		}
+		.images-list {
+			padding: 5px;
+			.generated-image-container {
+				width: 100%;
+				position: relative;
+				.overlay {
+					position: absolute;
+					height: 100% !important;
+					width: 100%;
+					opacity: 0.7;
+					background-color: black;
+					display: grid;
+					place-items: center;
+				}
+			}
+
+			.image-actions {
+				width: 100%;
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				.image-visibility-control {
+					.image-control {
+						width: 100%;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+					}
+				}
+			}
+		}
+	}
 }
