--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
 
-body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Josefin Sans', sans-serif !important;
-
+body {
+	margin: 0;
+	padding: 0;
+	font-family: "Josefin Sans", sans-serif !important;
+}
+body::-webkit-scrollbar {
+	width: 8px; /* width of the entire scrollbar */
+}
+body::-webkit-scrollbar-track {
+	background: white; /* color of the tracking area */
+}
+body::-webkit-scrollbar-thumb {
+	background-color: gray; /* color of the scroll thumb */
+	border: 2px solid gray; /* creates padding around scroll thumb */
 }
