--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,10 +11,27 @@
 			align-items: center;
 			.logo {
 				height: 40px;
-                margin-right: 10px;
+				margin-right: 10px;
 			}
 			p {
 				font-size: large;
+				color: white;
+			}
+		}
+	}
+	.user-icon {
+		cursor: pointer;
+		display: flex;
+		align-items: baseline;
+		justify-content: baseline;
+		span {
+            div {
+                font-size: medium;
+                padding: 0;
+                margin: 0;
+                text-align: end !important;
+                place-items: center;
+                display: grid !important;
 				color: white;
 			}
 		}
