--- a/src/components/ImagesList/ImagesList.scss
+++ b/src/components/ImagesList/ImagesList.scss
@@ -91,3 +91,10 @@
         }
     }
 }
+
+.dark-mode{
+    .images-list{
+        background-color: #12151C !important;
+        color: white;
+    }
+}
