--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -87,3 +87,10 @@
 		padding: 2vh !important;
 	}
 }
+
+.dark-mode {
+	.profile-page {
+		background-color: #12151c !important;
+        color: white !important;
+	}
+}
