fixed the homepage and profile page css

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -57,6 +57,7 @@
 .dark-mode {
 	.home-page {
 		background-color: #12151c !important;
+		min-height: 100vh;
 		color: white;
 		.create-section {
 			color: black;
