--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -90,6 +90,7 @@
 
 .dark-mode {
 	.profile-page {
+        min-height: 100vh;
 		background-color: #12151c !important;
         color: white !important;
 	}
